# ======================================================================
#  larsoftobj main build file
#
#  cd .../path/to/build/directory
#  source .../path/to/larsoftobj/ups/setup_for_development <-d|-p>
#  buildtool [-I /install/path] -bt[i] -jN
# ======================================================================
# LArSoftObj is an empty product
# It sets up the larsoftobj ups products (lardataobj, larcoreobj)
# ======================================================================


# use cmake 3.14 or later
cmake_minimum_required (VERSION 3.12...3.14 FATAL_ERROR)

project(larsoftobj LANGUAGES NONE)

find_package(cetmodules)
include(CetCMakeEnv)
cet_cmake_env()

find_package(nusimdata REQUIRED)
find_package(lardataalg REQUIRED)
find_package(lardataobj REQUIRED)
find_package(larcorealg REQUIRED)
find_package(larcoreobj REQUIRED)

# larsoftobj bundle scripts
add_subdirectory(bundle)
# ups - table and config files
#add_subdirectory(ups)
add_subdirectory(cmakeConfig)
# packaging utility
#include(UseCPack)
